--- a/scripts.yml
+++ b/scripts.yml
@@ -174,7 +174,7 @@ scripts:
               id: create_release
               uses: actions/create-release@v1
               env:
-                GITHUB_TOKEN: ${{ secrets.TOKEN }}
+                GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
               with:
                 tag_name: ${ver}
                 release_name: ${project_name} release v${ver}
@@ -237,7 +237,7 @@ scripts:
               id: upload-appimage
               uses: actions/upload-release-asset@v1
               env:
-                GITHUB_TOKEN: ${{ secrets.TOKEN }}
+                GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
               with:
                 upload_url: ${{needs.release.outputs.upload_url}}
                 asset_path: ./${project_name}-x86_64.AppImage
@@ -276,7 +276,7 @@ scripts:
               id: upload-release-asset
               uses: actions/upload-release-asset@v1
               env:
-                GITHUB_TOKEN: ${{ secrets.TOKEN }}
+                GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
               with:
                 upload_url: ${{ needs.release.outputs.upload_url }}
                 asset_path: ./${project_name}.zip
